--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -4,6 +4,8 @@ data_directory: /home/navaneet/OPENARM/OpenARM-VLA/datasets/openarm_pick_the_col
 max_len_data: 100
 demos_per_task: 50
 
+model_type: mamba
+
 obs_dim: 9
 action_dim: 8
 state_dim: 9
@@ -20,6 +22,14 @@ sampling_steps: 4
 batch_size: 256
 num_epochs: 300
 
+transformer:
+  n_heads: 8
+  attn_pdrop: 0.1
+  resid_pdrop: 0.1
+  mlp_pdrop: 0.0
+  use_rot_embed: false
+  rotary_xpos: false
+  bias: false
 
 learning_rate: 1e-4
 transformer_weight_decay: 0.05
