updated so mamy things to work with the model

--- a/conf/eval_model.yaml
+++ b/conf/eval_model.yaml
@@ -1,18 +1,18 @@
-model_checkpoint: null
+model_checkpoint: /workspace/OpenARM-VLA/outputs/2026-02-01/10-15-07/train/transformer/openarm_cube_lift_direction_tasks2/final_model.pth
 run_dir: null
 lang_emb: null
-dataset_root: /home/navaneet/OPENARM/OpenARM-VLA/datasets/openarm_cube_lift_direction_tasks
-model_type: mamba
-checkpoints_root: ./outputs
+dataset_root: /workspace/OpenARM-VLA/datasets/openarm_cube_lift_direction_tasks2
+model_type: transformer
+checkpoints_root: /workspace/OpenARM-VLA/outputs
 num_envs: 1
-num_rollouts: 10
-output_metrics: null
-video: True
-video_length: 200
+num_rollouts: 50
+output_metrics: /workspace/OpenARM-VLA/outputs/compare_runs/2026-02-01_10-15-07/transformer/metrics.json
+video: true
+video_length: 100
 task: Isaac-Lift-Cube-OpenArm-Play-v0
 real_time: false
 settle_steps: 50
 max_steps: 100
 success_threshold: 0.1
 task_keys: null
-tasks_config: ./conf/tasks.yaml
+tasks_config: /workspace/OpenARM-VLA/conf/tasks.yaml
